Fix link overflow issue

--- a/source/stylesheets/components/blog/_blog_post.scss
+++ b/source/stylesheets/components/blog/_blog_post.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  word-break: break-word;
 
   &-titleContainer {
     flex: 0 0 auto;
